--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,20 +13,22 @@ classifiers = [
     "Operating System :: OS Independent",
 ]
 dependencies = [
+    "jax ~= 0.4.14",
+    "jaxlib ~= 0.4.14",
     "diffrax ~= 0.4.1",
     "equinox ~= 0.10.11",
     "numpy ~= 1.25.2",
     "scipy ~= 1.11.1",
-    "plotly ~= 5.15.0",
+    "plotly ~= 5.16.0",
     "kaleido ~= 0.2.1",
     "matplotlib ~= 3.7.2",
-    "pypdf ~= 3.15.0",
+    "pypdf ~= 3.15.1",
 ]
 
 [project.optional-dependencies]
 dev = [
-    "black ~= 23.3.0",
-    "pytest ~= 7.3.1",
+    "black ~= 23.7.0",
+    "pytest ~= 7.4.0",
 ]
 estimation = [
     "optax ~= 0.1.7",
